# hex-core

./: .gitignore  README.md  main.py  pyproject.toml
src/: clonable_base_model.py
src/common/: common_types.py
src/controller/: controller_config.py  game_controller.py  game_controller_setup.py  game_update.py  global_update.py  level_loader.py  player_request.py
src/controllers/game_controller/: action_point_calculator.py  controller_config.py  game_controller.py  update.py
src/controllers/games_controller/: games_controller.py  games_controller_impl.py  parent_controller.py
src/controllers/lobby/: lobbies_controller.py  lobby_config.py
src/lobby/: lobbies_controller.py  lobby_config.py
src/model/: player.py  troops.py
src/model/board/: board.py  board_factory.py  coordinate.py  hexagon_coordinates.py
src/model/game_model/: core_control_score.py  game_config.py  game_event.py  game_status.py  game_status_updater.py  game_update.py  player_action_validator.py  player_actions.py  player_order.py
src/model/game_model/game_status/: game_status.py  game_status_factory.py  game_status_updater.py
src/model/tile/: coordinate.py  hexagon_coordinates.py  tile.py
src/model/troops/: troops.py
src/player/: base_player.py  in_game_player.py  in_lobby_player.py  player.py  player_config.py  player_request.py
src/resources/: 3.json  4.json
src/session/: game_session.py  pub_sub.py  remote_player_interface.py  remote_player_request.py  remote_update.py  session.py
src/view/: view.py
test/model/: test_hexagon_coordinates.py
(+2 files in other folders)
